src/objects/Patient_Health_History__c.object
<CustomObject>
    <fields>
        <fullName>Recommended_Antiboiotic_coverage__c</fullName>
        <label>Recommended Antiboiotic coverage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommended_Dental_Procedure_For__c</fullName>
        <label>Recommended Dental Procedure For</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommended_Dental_Procedure__c</fullName>
        <label>Recommended Dental Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replaced_Heart_Valves__c</fullName>
        <label>Replaced Heart Valves</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Page_Link__c</fullName>
        <formula>HYPERLINK(&quot;/apex/check_in_review?HealthHistoryID=&quot; + Id + &quot;&amp;AccountID=&quot; + Account__c, &quot;Review Health History Form&quot;)</formula>
        <label>Review Page Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rheumatic_Fever__c</fullName>
        <label>Rheumatic Fever</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rheumatoid_Arthritis__c</fullName>
        <label>Rheumatoid Arthritis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rheumatrex_Why__c</fullName>
        <label>Rheumatrex Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rheumatrex__c</fullName>
        <label>Rheumatrex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sensitive_Teeth__c</fullName>
        <label>Sensitive Teeth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shortness_of_Breath__c</fullName>
        <label>Shortness of Breath</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sinus_Problems__c</fullName>
        <label>Sinus Problems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skelid_Why__c</fullName>
        <label>Skelid Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skelid__c</fullName>
        <label>Skelid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sleep_Apnea_CPAP__c</fullName>
        <label>Sleep Apnea CPAP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sleep_Apnea__c</fullName>
        <label>Sleep Apnea</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Smoking_Frequency__c</fullName>
        <label>Smoking Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>less than 10 a day</fullName>
                </value>
                <value>
                    <fullName>10 or more a day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Smoking__c</fullName>
        <label>Smoking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <label>Spouse Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stroke__c</fullName>
        <label>Stroke</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Swelling_Bleeding_Discoloration_Lumps__c</fullName>
        <label>Swelling Bleeding Discoloration Lumps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Talent_Address__c</fullName>
        <label>Talent Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talent_Name__c</fullName>
        <label>Talent Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talent_Phone__c</fullName>
        <label>Talent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Teeth_Grinding__c</fullName>
        <label>Teeth Grinding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thyroid_Problems__c</fullName>
        <label>Thyroid Problems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tobacco_Duration__c</fullName>
        <label>Tobacco Duration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tobacco_Frequency__c</fullName>
        <label>Tobacco Frequency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tobacco_Type__c</fullName>
        <label>Tobacco Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tobacco_Use__c</fullName>
        <label>Tobacco Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tonsillitis__c</fullName>
        <label>Tonsillitis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trauma_to_Head_Neck__c</fullName>
        <label>Trauma to Head/Neck</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trexall_Why__c</fullName>
        <label>Trexall Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trexall__c</fullName>
        <label>Trexall</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tuberculosis__c</fullName>
        <label>Tuberculosis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Allergic_Reaction__c</fullName>
        <label>Type of Allergic Reaction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ulcers_Gastric_Reflux__c</fullName>
        <label>Ulcers Gastric Reflux</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Under_Dentist_Care_For__c</fullName>
        <label>Under Dentist Care For</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Under_Dentist_Care__c</fullName>
        <label>Under Dentist Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Under_Physician_Care__c</fullName>
        <label>Under Physician Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Under_Physician_Care_for__c</fullName>
        <label>Under Physician Care for</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unusual_sounds_in_ears_or_jaw__c</fullName>
        <label>Unusual sounds in ears or jaw</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_of_Alcohol__c</fullName>
        <label>Use of Alcohol</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_of_Drugs__c</fullName>
        <label>Use of Drugs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valve_Problems__c</fullName>
        <label>Valve Problems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vascular_Graft__c</fullName>
        <label>Vascular Graft</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vasculitis__c</fullName>
        <label>Vasculitis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venereal_Disease__c</fullName>
        <label>Venereal Disease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vioxx_Why__c</fullName>
        <label>Vioxx Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vioxx__c</fullName>
        <label>Vioxx</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wear_Dentures__c</fullName>
        <label>Wear Dentures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wear_or_advised_dental_splint__c</fullName>
        <label>Wear or advised dental splint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_Bridges_and_appliances__c</fullName>
        <label>What Bridges and appliances</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_Problems_with_Anesthesia__c</fullName>
        <label>What Problems with Anesthesia</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Which_Replaced_Joint__c</fullName>
        <label>Which Replaced Joint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_Hospitalized_last_5__c</fullName>
        <label>Why Hospitalized last 5</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_City__c</fullName>
        <label>Work City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_State__c</fullName>
        <label>Work State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Zip__c</fullName>
        <label>Work Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xgeva_Why__c</fullName>
        <label>Xgeva Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xgeva__c</fullName>
        <label>Xgeva</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Years_Wearing_Dentures__c</fullName>
        <label>Years Wearing Dentures</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zometa_Why__c</fullName>
        <label>Zometa Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zometa__c</fullName>
        <label>Zometa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hospitalized_last_5__c</fullName>
        <label>hospitalized last 5</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Patient Health History</label>
    <nameField>
        <label>Patient Health History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Health Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>